--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Shipwreck survival -- Fiction'
 - !lcsh 'Africa -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: Into the Primitive
 url: http://www.gutenberg.org/ebooks/33903
